kubernetes/apps/.archived/ferdium/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ferdium
  annotations:
    tailscale.com/proxy-group: ts-ingress
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Service
    gethomepage.dev/name: Ferdium
    gethomepage.dev/icon: ferdium.png
    gethomepage.dev/description: "Messaging aggregator server"
    gethomepage.dev/siteMonitor: "http://ferdium.gdd-service.svc:3333"
    authentik.gddnet.io/enabled: "true"
    authentik.gddnet.io/mode: proxy
    authentik.gddnet.io/name: Ferdium
    authentik.gddnet.io/category: Service
    authentik.gddnet.io/icon: "https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/svg/ferdium.svg"
    authentik.gddnet.io/description: "Messaging aggregator server"
    authentik.gddnet.io/publisher: Ferdium
    authentik.gddnet.io/proxy-hostname: ferdium.gddnet.io
spec:
  ingressClassName: tailscale
  rules:
    - host: ferdium.barn-walleye.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ferdium
                port:
                  number: 3333
  tls:
    - hosts:
        - ferdium.barn-walleye.ts.net
